sports-tv, billard, etc

--- a/plugins/milo/food/models/lunchoffer/fields.yaml
+++ b/plugins/milo/food/models/lunchoffer/fields.yaml
@@ -13,10 +13,7 @@ fields:
         label: Lunch Offer Price
         span: left
         comment: use . instead of , for decimals
-    soup_starters:
-        label: Soups, Starters
-        span: left
-        type: text
+        required: required
     always_hot:
         label: Always Hot (unten gelistet, z.B. Burger)
         type: checkbox
@@ -28,6 +25,7 @@ fields:
         span: left
         type: datepicker
         mode: date
+        required: required
     date_until:
         label: Until Date
         span: right 
