--- a/plugins/milo/heroimage/models/heroimage/fields.yaml
+++ b/plugins/milo/heroimage/models/heroimage/fields.yaml
@@ -21,5 +21,10 @@ fields:
     cost:
         label: Prize
         span: left
+    is_active:
+        label: Active
+        type: checkbox
+        default: true
+
 
 
