first day of week monday - new game

--- a/plugins/milo/sportstv/models/game/fields.yaml
+++ b/plugins/milo/sportstv/models/game/fields.yaml
@@ -9,6 +9,7 @@ fields:
         type: datepicker
         mode: datetime
         format: d.m.Y
+        firstDay: 1
     league:
         label: League
         type: relation
