firstday lunchoffer, opening hours

--- a/plugins/milo/food/models/lunchoffer/fields.yaml
+++ b/plugins/milo/food/models/lunchoffer/fields.yaml
@@ -26,8 +26,10 @@ fields:
         type: datepicker
         mode: date
         required: required
+        firstDay: 1
     date_until:
         label: Until Date
         span: right 
         type: datepicker
         mode: date
+        firstDay: 1
